--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "@google/genai": "^1.31.0",
     "react-dom": "^19.2.1",
     "react": "^19.2.1",
-    "@heroicons/react": "^2.2.0"
+    "@heroicons/react": "^2.2.0",
+    "html-to-image": "^1.11.11"
   },
   "devDependencies": {
     "@types/node": "^22.14.0",
