--- a/wrangler.toml
+++ b/wrangler.toml
@@ -1,8 +1,7 @@
-name = "xianshuyouzhi"
+name = "gaojian"
 compatibility_date = "2025-01-01"
 
-# Cloudflare Pages 配置
-pages_build_output_dir = "."
+[build]
+command = "npm install && npm run build"
 
-# 如果你现在不打算用 Functions
-# functions = "functions"
+pages_build_output_dir = "dist"
